Buscador de juegos echo en SpringBoot que busca un juego la base de datos.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql=true
 
 # logging.level.root=DEBUG
 # spring.jpa.show-sql=true
+
+# Deshabilitar spring.jpa.open-in-view
+spring.jpa.open-in-view=false
