--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,28 @@
+# Nombre de la aplicación
 spring.application.name=cursos
+
+# Habilitar reinicio automático con DevTools
 spring.devtools.restart.enabled=true
+
+# Deshabilitar caché de Thymeleaf para desarrollo
 spring.thymeleaf.cache=false
+
+# Habilitar LiveReload con DevTools
 spring.devtools.livereload.enabled=true
 
+# Configuración de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/3capas
 spring.datasource.username=3capas
 spring.datasource.password=3capas
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#Para debugear posibles fallos
 # logging.level.root=DEBUG
 # spring.jpa.show-sql=true
 
-# Deshabilitar spring.jpa.open-in-view
+# Deshabilitar spring.jpa.open-in-view para evitar consultas durante la renderización de la vista
 spring.jpa.open-in-view=false
